tests/negative/InfixErrorP.juvix
module InfixErrorP;

  syntax infix 5 , ;

  type Pair :=
   , : Type → Type → Pair;

  fst : Pair → Type;
  fst (x , ) := x;

end;
